fix: iOS Safari/Microsoft Surface showing native scrollbar

--- a/packages/simplebar/src/simplebar.css
+++ b/packages/simplebar/src/simplebar.css
@@ -55,11 +55,13 @@
   max-width: 100%; /* Not required for horizontal scroll to trigger */
   max-height: 100%; /* Needed for vertical scroll to trigger */
   scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .simplebar-content-wrapper::-webkit-scrollbar,
 .simplebar-hide-scrollbar::-webkit-scrollbar {
-  display: none;
+  width: 0;
+  height: 0;
 }
 
 .simplebar-content:before,
@@ -206,5 +208,5 @@
   visibility: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
-  -ms-overflow-style: scrollbar;
+  -ms-overflow-style: none;
 }
